--- a/secret_word/src/index.css
+++ b/secret_word/src/index.css
@@ -4,7 +4,7 @@ body {
 }
 
 body {
-  font-family: Helvetica;
+  font-family: Arial, Helvetica, sans-serif;
   margin: 0;
   padding: 0;
   background: linear-gradient(
@@ -15,10 +15,10 @@ body {
 }
 
 button {
-  background: #1646a0;
-  color: #fff;
+  background: #000;
+  color: #ecfa00;
   padding: 0 45px;
-  border: 2px solid #fff;
+  border: 2px solid #000;
   border-radius: 25px;
   height: 50px;
   text-align: uppercase;
@@ -29,5 +29,5 @@ button {
 }
 
 button:hover {
-  background-color: #0923af;
+  background-color: #1a1a00;
 }
